<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sfondo_menu_game"
    tools:context=".games.MenuGameActivity">


    <TextView
        android:id="@+id/difficultTextView"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="208dp"
        android:text="@string/difficult"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeMinTextSize="12sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEasy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:background="@drawable/rounded_button"
        android:text="@string/easy"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultTextView"
        app:layout_constraintVertical_bias="0.098" />

    <Button
        android:id="@+id/buttonMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:background="@drawable/rounded_button"
        android:text="@string/medium"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEasy"
        app:layout_constraintVertical_bias="0.109" />

    <Button
        android:id="@+id/buttonHard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:background="@drawable/rounded_button"
        android:text="@string/hard"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMedium"
        app:layout_constraintVertical_bias="0.154" />

</androidx.constraintlayout.widget.ConstraintLayout>