<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FF6D00"
                android:elevation="24dp">

                <ImageView
                    android:id="@+id/refreshImageView"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/sync_white" />

                <SearchView
                    android:id="@+id/couponSearchView"
                    android:layout_width="260dp"
                    android:layout_height="65dp"
                    android:clickable="true"
                    android:elevation="24dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:iconifiedByDefault="false"
                    android:isScrollContainer="true"
                    android:outlineSpotShadowColor="@android:color/white"
                    android:padding="10dp"
                    android:queryHint="Cerca i tuoi coupon"
                    android:textAlignment="center"
                    android:theme="@style/AppThemeDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:overScrollMode="never"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/couponSearchView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/filterTextView0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tutti"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/filterCard0"
                        app:layout_constraintHorizontal_bias="0.495"
                        app:layout_constraintStart_toStartOf="@+id/filterCard0"
                        app:layout_constraintTop_toBottomOf="@+id/filterCard0" />

                    <TextView
                        android:id="@+id/filterTextView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alimentari"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/filterCard1"
                        app:layout_constraintStart_toStartOf="@+id/filterCard1"
                        app:layout_constraintTop_toBottomOf="@+id/filterCard1" />

                    <TextView
                        android:id="@+id/filterTextView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/abbigliamento"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/filterCard2"
                        app:layout_constraintStart_toStartOf="@+id/filterCard2"
                        app:layout_constraintTop_toBottomOf="@+id/filterCard2"
                        app:layout_constraintVertical_bias="0.1" />


                    <TextView
                        android:id="@+id/filterTextView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/cultura"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/filterCard3"
                        app:layout_constraintStart_toStartOf="@+id/filterCard3"
                        app:layout_constraintTop_toBottomOf="@+id/filterCard3"
                        app:layout_constraintVertical_bias="0.1" />

                    <TextView
                        android:id="@+id/filterTextView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/giochi"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/filterCard4"
                        app:layout_constraintStart_toStartOf="@+id/filterCard4"
                        app:layout_constraintTop_toBottomOf="@+id/filterCard4"
                        app:layout_constraintVertical_bias="0.1" />

                    <TextView
                        android:id="@+id/filterTextView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/vario"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/filterCard5"
                        app:layout_constraintStart_toStartOf="@+id/filterCard5"
                        app:layout_constraintTop_toBottomOf="@+id/filterCard5"
                        app:layout_constraintVertical_bias="0.1" />


                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/filterCard0"
                        android:layout_width="130dp"
                        android:layout_height="60dp"
                        android:layout_margin="15dp"
                        android:background="@drawable/ali_card"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="1dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/material_on_surface_stroke"
                        app:strokeWidth="1dp">

                        <ImageView
                            android:id="@+id/cardTuttiImageView"
                            android:layout_width="match_parent"
                            android:layout_height="67dp"
                            app:srcCompat="@drawable/card_filter_tutti" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/filterCard1"
                        android:layout_width="130dp"
                        android:layout_height="60dp"
                        android:layout_margin="15dp"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="1dp"
                        app:layout_constraintStart_toEndOf="@id/filterCard0"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/material_on_surface_stroke"
                        app:strokeWidth="1dp">

                        <ImageView
                            android:id="@+id/cardAlimentariImageView"
                            android:layout_width="match_parent"
                            android:layout_height="67dp"
                            app:srcCompat="@drawable/card_filter_alimentari" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/filterCard2"
                        android:layout_width="130dp"
                        android:layout_height="60dp"
                        android:layout_margin="15dp"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="1dp"
                        app:layout_constraintStart_toEndOf="@+id/filterCard1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/material_on_surface_stroke"
                        app:strokeWidth="1dp">

                        <ImageView
                            android:id="@+id/cardAbbigliamentoImageView"
                            android:layout_width="match_parent"
                            android:layout_height="67dp"
                            app:srcCompat="@drawable/card_filter_abbigliamento" />
                    </com.google.android.material.card.MaterialCardView>


                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/filterCard3"
                        android:layout_width="130dp"
                        android:layout_height="60dp"
                        android:layout_margin="15dp"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="1dp"
                        app:layout_constraintStart_toEndOf="@+id/filterCard2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/material_on_surface_stroke"
                        app:strokeWidth="1dp">

                        <ImageView
                            android:id="@+id/cardCulturaImageView"
                            android:layout_width="wrap_content"
                            android:layout_height="67dp"
                            app:srcCompat="@drawable/card_filter_cultura" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/filterCard4"
                        android:layout_width="130dp"
                        android:layout_height="60dp"
                        android:layout_margin="15dp"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="1dp"
                        app:layout_constraintStart_toEndOf="@+id/filterCard3"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/material_on_surface_stroke"
                        app:strokeWidth="1dp">

                        <ImageView
                            android:id="@+id/cardGiochiImageView"
                            android:layout_width="wrap_content"
                            android:layout_height="67dp"
                            app:srcCompat="@drawable/card_filter_giochi" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/filterCard5"
                        android:layout_width="130dp"
                        android:layout_height="60dp"
                        android:layout_margin="15dp"
                        android:theme="@style/Theme.MaterialComponents.Light"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="1dp"
                        app:layout_constraintStart_toEndOf="@+id/filterCard4"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/material_on_surface_stroke"
                        app:strokeWidth="1dp">

                        <ImageView
                            android:id="@+id/cardVarioImageView"
                            android:layout_width="wrap_content"
                            android:layout_height="67dp"
                            app:srcCompat="@drawable/card_filter_vario" />
                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </HorizontalScrollView>

            <TextView
                android:id="@+id/iTuoiCouponTextView"
                android:layout_width="130dp"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/i_tuoi_coupon"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="5sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/coupon_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_behavior="#string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/couponSearchView"
                app:layout_constraintVertical_bias="0.0">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>